--- a/config/default copy.yaml
+++ b/config/default copy.yaml
@@ -2,7 +2,6 @@ servers: # liste de serveurs
   - server: # un serveur
       server_name: domain1.com # nom du serveur (optionnel)
       port: 8080 # port du serveur (optionnel, default: 80)
-      address: 127.0.0.1 # adresse du serveur (optionnel, default: 0.0.0.0)
       error_pages: # liste des pages d'erreur par defaut (optionnel)
         - 404: ./404.html
       client_max_body_size: 10m # taille max des requetes en megaoctets (optionnel, default: 1m TODO: 1m ?)
@@ -18,7 +17,7 @@ servers: # liste de serveurs
             cgi: .php PWD/cgi-bin/ # cgi 'extension' 'racine du cgi' (optionnel)
             methods: POST
         - /uploader:
-            methods: PUT
+            methods: POST
             upload: PWD/www/files/ # racine du telechargement, active l'upload de fichier (optionnel)
         - /admin/:
             methods: GET POST
@@ -30,4 +29,3 @@ servers: # liste de serveurs
 - server:
       server_name: domain2.com
       port: 8080
-      address: 127.0.0.2
