--- a/config/default.yaml
+++ b/config/default.yaml
@@ -3,38 +3,30 @@ servers: # liste de serveurs
       server_name: domain1.com # nom du serveur (optionnel)
       port: 8080 # port du serveur (optionnel, default: 80)
       error_pages: # liste des pages d'erreur par defaut (optionnel)
-        - 404: ./404.html
+        - 404: PWD/www/errors/404.html
       client_max_body_size: 10m # taille max des requetes en megaoctets (optionnel, default: 1m TODO: 1m ?)
       routes: # liste des routes du serveur (optionnel ?)
         - /:
             methods: GET # methodes autorisees par la route (optionnel, default: GET)
-            redirection: /404.html # redirection de la route (optionnel)
             root: PWD/www/ # racine de la route (optionnel, default: PWD/www/ + url)
             repertory_listing: false # autorise le listing des repertoires (optionnel, default: false)
             index: index.html # page index (optionnel, default: index.html)
-        - /new_user:
+        - /redirect/:
+            redirection: / # redirection de la route (optionnel)
+        - /new_user/:
             cgi: .py PWD/cgi/python_cgi # cgi 'extension' 'racine du cgi' (optionnel)
             methods: POST
             redirection: /404.html # redirection de la route (optionnel)
-        - /linux_cgi:
-            cgi: .sh PWD/cgi/ubuntu_cgi_tester
-            methods: GET
-        - /php_cgi:
+        - /php_cgi/:
             cgi: .php /usr/bin/php
             methods: GET
-        - /42_cgi:
-            cgi: .bla PWD/cgi/ubuntu_cgi_tester
-            methods: GET
-        - /uploader:
+        - /uploader/:
             methods: POST
             upload: PWD/www/files/ # racine du telechargement, active l'upload de fichier (optionnel)
         - /admin/:
-            methods: GET POST
+            methods: GET
             root: PWD/www/admin/
             repertory_listing: true
-        - /get_user:
-            methods: GET
-            cgi: .php PWD/cgi-bin/
   - server:
       server_name: domain2.com
       port: 8060
