clean up and remove methods at top level

--- a/config/default.yaml
+++ b/config/default.yaml
@@ -4,7 +4,7 @@ servers: # liste de serveurs
       port: 8080 # port du serveur (optionnel, default: 80)
       error_pages: # liste des pages d'erreur par defaut (optionnel)
         - 404: PWD/www/errors/404.html
-      client_max_body_size: 10m # taille max des requetes en megaoctets (optionnel, default: 1m TODO: 1m ?)
+      client_max_body_size: 2k # taille max des requetes en megaoctets (optionnel, default: 2k)
       routes: # liste des routes du serveur (optionnel ?)
         - /:
             methods: GET # methodes autorisees par la route (optionnel, default: GET)
