fix for valid index file

--- a/config/eval.yaml
+++ b/config/eval.yaml
@@ -9,7 +9,8 @@ servers:
         - /:
             methods: GET
             root: PWD/www/ # pour l'instant ca crash si on le met pas
-            index: youpi.bla # pour l'instant ca crash s'il n'y a pas d'index ou de repertory_listing
+            index: index.html # pour l'instant ca crash s'il n'y a pas d'index ou de repertory_listing
+            #index: youpi.bla # pour l'instant ca crash s'il n'y a pas d'index ou de repertory_listing
         - /post_body:
             methods: POST
         - /directory/:
