--- a/config/default.yaml
+++ b/config/default.yaml
@@ -12,7 +12,7 @@ servers: # liste de serveurs
             repertory_listing: false # autorise le listing des repertoires (optionnel, default: false)
             index: index.html # page index (optionnel, default: index.html)
         - /google/:
-            redirection: http://www.google.com # redirection de la route (optionnel)
+            redirection: www.google.com # redirection de la route (optionnel)
         - /new_user/:
             cgi: .py PWD/cgi/python_cgi # cgi 'extension' 'racine du cgi' (optionnel)
             methods: POST
@@ -30,3 +30,8 @@ servers: # liste de serveurs
   - server:
       server_name: domain2.com
       port: 8060
+      routes:
+        - /:
+            methods: GET
+            root: PWD/www/
+            index: index.html
