--- a/config/default.yaml
+++ b/config/default.yaml
@@ -14,14 +14,18 @@ servers: # liste de serveurs
             index: index.html # page index (optionnel, default: index.html)
         - /google/:
             redirection: www.google.com # redirection de la route (optionnel)
+            root: PWD/www/
         - /new_user/:
             cgi: .py PWD/cgi/python_cgi # cgi 'extension' 'racine du cgi' (optionnel)
             methods: POST
+            root: PWD/www/new_user/
             redirection: /404.html # redirection de la route (optionnel)
         - /php_cgi/:
             cgi: .php /usr/bin/php
+            root: PWD/www/php_cgi/
             methods: GET
         - /uploader/:
+            root: PWD/www/uploader
             methods: POST
             upload: PWD/www/files/ # racine du telechargement, active l'upload de fichier (optionnel)
         - /admin/:
