delete is working with cgi

--- a/tests/end-to-end/default.yaml
+++ b/tests/end-to-end/default.yaml
@@ -32,6 +32,6 @@ servers:
             root: PWD/www/
             redirection: /mutual_redirect/
         - /api/:
-            methods: POST GET
+            methods: POST GET DELETE PUT
             root: PWD/www/api/
             cgi: .php /bin/php
