--- a/config/failing.yaml
+++ b/config/failing.yaml
@@ -4,7 +4,7 @@ servers: # liste de serveurs
       port: 8080 # port du serveur (optionnel, default: 80)
       error_pages: # liste des pages d'erreur par defaut (optionnel)
         - 404: ./404.html
-      client_max_body_size: 10m # taille max des requetes en megaoctets (optionnel, default: 1m TODO: 1m ?)
+      client_max_body_size: 10m
 
 
 
